--- a/GameSources/styles/main.css
+++ b/GameSources/styles/main.css
@@ -1,5 +1,26 @@
+@keyframes transparentFadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 0.2;
+    }
+}
+
+@keyframes transparentFadeOut {
+    0% {
+        opacity: 1;
+    }
+
+    100% {
+        opacity: 0;
+    }
+}
+
 * {
     overflow: hidden;
+    font-family: Consolas;
 }
 
 body {
@@ -19,19 +40,7 @@ div.MainContainer {
 }
 
 
-div#keynotesContainer,
-div#keynotePressedContainer {
-    font-family: Consolas;
-    font-size: 128px;
-    position: absolute;
-    left: 0;
-    /* top: calc(50% - 128px/2); */
-    width: 100%;
-    height: 100%;
-    line-height: 100%;
-}
 
-#youtubeVideoPlayer {
-    width: 800px;
-    height: 100%;
+.transparentFadeIn {
+    animation: transparentFadeIn linear 1s;
 }
